--- a/data/pdf/PrincipleMacroSpring2022/syllabus.tex
+++ b/data/pdf/PrincipleMacroSpring2022/syllabus.tex
@@ -61,11 +61,27 @@
 
 \section*{Course Overview}
 \begin{itemize}
+
+    \item Course website:
+    \begin{itemize}
+        \item Materials: \href{https://huijunchen9260.github.io/PrincipleMacroSpring2022.html}{Webpage}
+        \item Quizzes / Exam: \href{https://osu.instructure.com/courses/114824}{Carmen}
+        \item Textbook and Textbook Website: \href{https://www.core-econ.org/}{Core-econ}, \href{https://www.core-econ.org/the-economy/book/text/0-3-contents.html}{The Economy}
+        \begin{itemize}
+            \item You can use the student resources in the core-econ website as the tool for evaluating your understanding about the course material.
+        \end{itemize}
+        \item Calculus videos: \href{https://www.youtube.com/watch?v=WUvTyaaNkzM&list=PLZHQObOWTQDMsr9K-rj53DwVRMYO3t5Yr}{The Essence of Calculus}
+        \item Zoom:
+        \begin{itemize}
+            \item \href{https://osu.zoom.us/j/2532324996?pwd=c2cweEphWFMvTVZreHJ0MHNRNUdodz09}{zoom link}
+            \item Meeting ID: 253 232 4996; Password: 553349
+        \end{itemize}
+    \end{itemize}
     \item Meeting Time: Monday, Wednesday, Friday, 8:00AM - 8:55AM
     \item Location: McPherson Lab 1015
     \item Class Dates: Jan 10, 2022-Apr 25, 2022
     \item Email address: \href{chen.9260@buckeyemail.osu.edu}{chen.9260@buckeyemail.osu.edu}.
-    \item To get email reply, you \textbf{must} satisfy two conditions below, :
+    \item To get email reply, you \textbf{must} satisfy two conditions below:
     \begin{enumerate}
         \item DO \textbf{NOT} SEND TO CARMEN EMAIL.
         \item Use \texttt{[E2002.01]} at the beginning of your subject title.
@@ -74,10 +90,353 @@
         \end{itemize}
     \end{enumerate}
     \item I will reply your email within \textit{2 business day}.
-    \end{itemize}
-    \item Office hour:
-    \item Principles of macroeconomics will cover the following general topics: measures of national well-being, macroeconomic models, economic growth, monetary and fiscal policy.
+    \item Office hour: Monday 9:00-10:00AM and Wednesday 9:00-10:00AM, on \href{https://osu.zoom.us/j/2532324996?pwd=c2cweEphWFMvTVZreHJ0MHNRNUdodz09}{zoom link}
+    \item Principles of macroeconomics will cover the following general topics: measures of national well\-being, macroeconomic models, economic growth, monetary and fiscal policy.
 \end{itemize}
+
+\newpage
+
+\section*{Grades}
+
+\newlength\q
+\setlength\q{\dimexpr .5\textwidth -2\tabcolsep}
+\begin{tabular}{|p{\q}|p{\q}|}
+    \hline
+    Categories  & Points \\
+    \hline
+    \hline
+    Qizzes on course material   & 20 points \\
+    \hline
+    Qizzes on Calculus videos & 20 points \\
+    \hline
+    Midterm Exam & 30 points \\
+    \hline
+    Final Exam & 30 points \\
+    \hline
+    SEI Extra credit & 2 points \\
+    \hline
+    Total & 102 points \\
+    \hline
+\end{tabular}
+\textit{See course schedule, below, for due dates}
+
+
+\section*{Grading Policy}
+
+\subsection*{Quizzes / Exams}
+
+There are two categories of Weekly quizzes in this class: \underline{Economics materials} and \underline{Calculus materials}.
+You will have \textbf{2} attempts on Carmen and \textbf{60 minutes} per attempt for quizzes of Economics materials, and \textbf{unlimited} attempts and \textbf{unlimited time} per attempt for quizzes of Calculus materials. When calculating the final grade, I will \textbf{drop one quiz with the lowest grade} in each category (except Quiz on Calculus, Ch. 10 \& 11).
+
+The exact due date and time for quizzes and exams should refer to the schedule below and the setting on Carmen.
+In principle, all quizzes are due on \textbf{Sunday 11:59pm}, and the answer is available on \textbf{next Monday}.
+
+Late quizzes are not accepted, unless you have formal excuse (require formal documentation, and the \textbf{instrutor still has rights to decide whether to extend the quiz / exams for this excuse}).
+
+\section*{Quizzes and Examinations Integrity Policies}
+
+\textbf{Quizzes}: Discussions are \textbf{encouraged}, but each person must hand in their own quiz on Carmen.
+
+\textbf{Examinations}: Discussions are \textbf{forbidden}, either face to face or via online discussion board / Social media. You are allowed to refer to course slides, core-econ textbook, lecture videos.
+
+\subsection*{Extra credits}
+
+Extra credits: At the end of the semester, I will have you do the Student Evaluation of Instruction (SEI). If I get $80\%$ response rate on SEI by the end of the semester, everyone will get 2 points of extra credits.
+
+\subsection*{Curving}
+
+If less than $40\%$ of the students get A- or above, I will add some points to everybody until $40\%$ of the students get A- or above, but I don’t expect this to occur.
+
+\newpage
+
+\section*{Course Attendance Policy}
+
+According to the new ASC policy, \textbf{strictly masking} is required, which means you should wear your mask to cover your mouth and nose.
+Also, the students \textbf{are not allowed to eat or drink} in class.
+
+The definition of in-person class also redefined by new ASC policy.
+Up to \textbf{24\%} of the class meetings can be online.
+If I cannot teach the course in person due to personal issue, I will make an announcement on \href{https://osu.instructure.com/courses/114824}{Carmen}, and the class will be held online in the \href{https://osu.zoom.us/j/2532324996?pwd=c2cweEphWFMvTVZreHJ0MHNRNUdodz09}{zoom link}.
+
+The instructor is also required to make reasonable accommodations for students who cannot attend the classes for a period of time, either because of sickness or quarantine.
+My arrangement is to open all my class recordings back in the summer in the \href{https://huijunchen9260.github.io/PrincipleMacroSpring2022.html}{Webpage} so that students who cannot come to class can also reach out the course materials by watching the recorded videos.
+Also, since the office hour is online, those students who cannot attend the in-person meeting can also ask me question on the \href{https://osu.zoom.us/j/2532324996?pwd=c2cweEphWFMvTVZreHJ0MHNRNUdodz09}{zoom link}.
+
+
+\newpage
+
+\section*{Course Schedule}
+
+\newlength\bb
+\setlength\bb{\dimexpr .08\textwidth -2\tabcolsep}
+\newlength\qq
+\setlength\qq{\dimexpr .12\textwidth -2\tabcolsep}
+\newlength\rr
+\setlength\rr{\dimexpr .3\textwidth -2\tabcolsep}
+\newlength\pp
+\setlength\pp{\dimexpr .5\textwidth -2\tabcolsep}
+\begin{tabular}{|p{\bb}|p{\qq}|p{\rr}|p{\pp}|}
+    \hline
+        Week & Days & Quizzes & Topics, Readings and Deadlines for quizzes \\
+    \hline
+    \hline
+        1
+        &
+        01/10
+        \newline
+        01/12
+        \newline
+        01/14
+        &
+        Essence of Calculus Ch.1
+        \newline
+        Syllabus
+        &
+        Topic: Review of Mathematics
+        \newline
+        Reading: Math Supplement
+        \newline
+        Deadline: 01/16 11:59pm
+    \\
+    \hline
+        2
+        &
+        01/19
+        \newline
+        01/21
+        &
+        Essence of Calculus Ch.2
+        \newline
+        Unit 1 \& 2
+        &
+        Topic: Introduction
+        \newline
+        Reading: Unit 1 and 2
+        \newline
+        Deadline: 01/23 11:59pm
+    \\
+    \hline
+        3
+        &
+        01/24
+        \newline
+        01/26
+        \newline
+        01/28
+        &
+        Essence of Calculus Ch.3
+        \newline
+        Unit 6 \& 7
+        &
+        Topic: Labor markets and unemployment
+        \newline
+        Reading: Unit 6 and Unit 7 (sec. on wage-setting)
+        \newline
+        Deadline: 01/30 11:59pm
+    \\
+    \hline
+        4
+        &
+        01/31
+        \newline
+        02/02
+        \newline
+        02/04
+        &
+        Essence of Calculus Ch.4
+        \newline
+        Unit 9 \& 10
+        &
+        Topic: Unemployment and Credit Market
+        \newline
+        Reading: Unit 9, and Unit 10 sec. 10.8
+        \newline
+        Deadline: 02/06 11:59pm
+    \\
+    \hline
+        5
+        &
+        02/07
+        \newline
+        02/09
+        \newline
+        02/11
+        &
+        Essence of Calculus Ch.5
+        \newline
+        Unit 3
+        &
+        Topic: Credit Market
+        \newline
+        Reading: Unit 3
+        \newline
+        Deadline: 02/13 11:59pm
+    \\
+    \hline
+        6
+        &
+        02/14
+        \newline
+        02/16
+        \newline
+        02/18
+        &
+        Essence of Calculus Ch.6
+        \newline
+        Unit 13
+        &
+        Topic: Economic accounting and fluctuations
+        \newline
+        Reading: Unit 13
+        \newline
+        Deadline: 02/20 11:59pm
+    \\
+    \hline
+        7
+        &
+        02/21, 23, 25
+        &
+        None
+        &
+        Week for adjustment
+    \\
+    \hline
+        8
+        &
+        02/28
+        &
+        None
+        &
+        Midterm Exam
+    \\
+    \hline
+        9
+        &
+        03/07
+        \newline
+        03/09
+        \newline
+        03/11
+        &
+        Essence of Calculus Ch.7
+        \newline
+        Unit 14
+        &
+        Topic: Fiscal Policy
+        \newline
+        Reading: Unit 14
+        \newline
+        Deadline: 03/13 11:59pm
+    \\
+    \hline
+        10
+        &
+        03/14, 16, 18
+        &
+        None
+        &
+        Spring break
+    \\
+    \hline
+        11
+        &
+        03/21
+        \newline
+        03/23
+        \newline
+        03/25
+        &
+        Essence of Calculus Ch.8
+        \newline
+        Unit 15
+        &
+        Topic: Monetary Policy
+        \newline
+        Reading: Unit 15
+        \newline
+        Deadline: 03/27 11:59pm
+    \\
+    \hline
+        12
+        &
+        03/28
+        \newline
+        03/30
+        \newline
+        04/01
+        &
+        Essence of Calculus Ch.9
+        \newline
+        Unit 16
+        &
+        Topic: Long-run economic performance
+        \newline
+        Reading: Unit 16
+        \newline
+        Deadline: 04/03 11:59pm
+    \\
+    \hline
+        13
+        &
+        04/04
+        \newline
+        04/06
+        \newline
+        04/08
+        &
+        Essence of Calculus Ch.10
+        \newline
+        Unit 17
+        &
+        Topic: Application: The Great Depression
+        \newline
+        Reading: Unit 17
+        \newline
+        Deadline: 04/10 11:59pm
+    \\
+    \hline
+        14
+        &
+        04/11
+        \newline
+        04/13
+        \newline
+        04/15
+        &
+        Essence of Calculus Ch.11
+        \newline
+        Unit 11
+        &
+        Topic: Application: Asset price bubbles
+        \newline
+        Reading: Unit 11
+        \newline
+        Deadline: 04/17 11:59pm
+    \\
+    \hline
+        15
+        &
+        04/18, 20, 22
+        &
+        None
+        &
+        Week for adjustment
+    \\
+    \hline
+        16
+        &
+        04/27
+        &
+        None
+        &
+        Final Exam
+    \\
+    \hline
+\end{tabular}
+
+
+
+\newpage
 
 \section*{Course learning outcomes}
 
@@ -100,34 +459,57 @@ Students will learn about the formation and durability of political, economic, a
 
 Students will comprehend and assess the nature and values of organizations and polities and their importance in social problem solving and policy making through discussion of fiscal and monetary policy, business cycles and the Federal Reserve Bank, including its values and objectives.
 
-\section*{Course materials}
 
-Course website:
 
-Please register as student on \href{https://www.core-econ.org/}{https://www.core-econ.org/}, and use the open source textbook \href{https://www.core-econ.org/the-economy/book/text/0-3-contents.html}{The Economy} as the major textbook for this course.
-You can use the student resources in the core-econ website as the tool for evaluating your understanding about the course material.
+\newpage
 
-\section*{Grades}
+\section*{Ohio State’s academic integrity policy}
 
-\section*{Grading Policy}
+Academic integrity is essential to maintaining an environment that fosters excellence in teaching, research, and other educational and scholarly activities.
+Thus, The Ohio State University and the Committee on Academic Misconduct (COAM) expect that all students have read and understand the University’s Code of Student Conduct, and that all students will complete all academic and scholarly assignments with fairness and honesty.
+Students must recognize that failure to follow the rules and guidelines established in the University’s Code of Student Conduct and this syllabus may constitute ``Academic Misconduct.''
 
-% This course puts a lot of weight on your performance during the semester, not just the exams. To perform well in the course, in addition to doing well in the exams, you need to do two more things: Homework assignments on core-econ and Quizzes on core-econ.
-% Homework Assignment on core-econ: A good way to study the course material is through Homework Assignment on core-econ. Homework assignments are effort-based. For each week, you only need to upload 5 “exercise section” in The Economy textbook for the Unit taught in that week. Therefore, as long as you upload a file contains 5 exercises, you will get full credit for that homework assignment. Each chapter is worth 1 point. The answer of the homework assignment will be uploaded after the deadline of the corresponding homework assignment, so you can check whether your understanding on the material is correct. If I found you upload an empty file to cheat on this effort-based assignment, you’ll immediately fail this course.
-% Quizzes on core-econ: For every chapter, core-econ provides quizzes for you to test your understanding about the chapter. You will answer the quizzes on Carmen. For each weekly quiz, you’ll answer 5 questions within one hour. Unlike Homework Assignment, there is no retake and there is no hint. So, you need some preparation before you take the quizzes. Each week’s quiz is worth 2 points. Take the quizzes very seriously because the exam questions will be very similar to midterm and final exam questions.
+The Ohio State University’s Code of Student Conduct (Section 3335-23-04) defines academic misconduct as: ``Any activity that tends to compromise the academic integrity of the University, or subvert the educational process.''
+Examples of academic misconduct include (but are not limited to) plagiarism, collusion (unauthorized collaboration), copying the work of another student, and possession of unauthorized materials during an examination.
+Ignorance of the University’s Code of Student Conduct is never considered an ``excuse'' for academic misconduct, so I recommend that you review the Code of Student Conduct and, specifically, the sections dealing with academic misconduct.
 
-\subsection*{Extra credits}
+\textbf{If I suspect that a student has committed academic misconduct in this course, I am obligated by University Rules to report my suspicions to the Committee on Academic Misconduct.} 
+If COAM determines that you have violated the University’s Code of Student Conduct (i.e., committed academic misconduct), the sanctions for the misconduct could include a failing grade in this course and suspension or dismissal from the University.
 
-Extra credits: At the end of the semester, I will have you do the Student Evaluation of Instruction (SEI). If I get $85\%$ response rate on SEI by the end of the semester, everyone will get 2 points of extra credits.
+If you have any questions about the above policy or what constitutes academic misconduct in this course, please contact me.
 
-% Discussion board on Carmen: As the substitute for midterm, the weekly discussion board should play an important role in facilitating your understanding in math and economics. The youtube video series Essence of Calculus is an elegant and intuitive video to serve such purpose. Our textbook core-econ is known for using a lot of Calculus in its context. To facilitate discussion, the rule of the discussion board would work as follows: total points are 33 points, each week’s discussion are 3 points. In each week, you’ll need to watch one video in  Essence of Calculus that will be assigned on Carmen discussion board, and write (1) one review for the content of the video (1 points), and (2) two replies (1 point each) for other people’s review. The review should be more than 150 words, and replies should be more than 30 words. Any review or reply that does not match the word count standard only get a proportion of the points.
+Other sources of information on academic misconduct (integrity) to which you can refer include:
+\begin{itemize}
+    \item The Committee on Academic Misconduct web pages (COAM Home)
+    \item Ten Suggestions for Preserving Academic Integrity (Ten Suggestions)
+    \item Eight Cardinal Rules of Academic Integrity (www.northwestern.edu/uacc/8cards.htm)
+\end{itemize}
 
-\subsection*{Curving}
+Violating university or course rules as contained in the course syllabus or other information provided to the student in regard to student classroom conduct may result in your being removed from the class rolls.
 
-If less than $40\%$ of the students get A- or above, I will add some points to everybody until $40\%$ of the students get A- or above, but I don’t expect this to occur.
+\subsection*{Other Policies}
 
-\subsection*{Assignment / Quiz Due}
+Students with disabilities that have been certified by the Office for Disability Services will be appropriately accommodated.
+They should inform the instructor as soon as possible of their needs.
+Students who feel that they need an accommodation based on the impact of a disability should contact the Office for Disability Service.
+General information is available at http://www.ods.ohio-state.edu.
 
-All assignments are due on the date specified on Carmen; late assignments are not accepted, unless you have formal excuse.
+The core material contained within this syllabus will either be discussed in class or assigned as required reading.
+
+If you decide not to complete the course, please formally withdraw from the class.
+Failure to officially withdraw will result in an ``E'' on your transcript and you will have foregone the opportunity to receive a refund (partial or full).
+
+You are expected to be on time to class.
+In those events when you do arrive at class late, please find a seat as quietly and unobtrusively as possible.
+Do not interrupt class to hand in assignments or request materials.
+An opportunity will be provided for these activities at an appropriate time.
+
+We will be doing in-class participation exercises that work via the internet.
+Please be sure to bring a mobile device (laptop, tablet, or smartphone) with you to class each day.
+
+\subsection*{Economics Learning Center}
+
+Information can be found at https://economics.osu.edu/economics-learning-center.
 
 \subsection*{Grading scale}
 \begin{itemize}
@@ -143,7 +525,6 @@ All assignments are due on the date specified on Carmen; late assignments are no
     \item 60 –66.9: D
     \item Below 60: E
 \end{itemize}
-
 
 
 
