--- a/data/pdf/IntermediateMacroSummer2022/syllabus/syllabus.tex
+++ b/data/pdf/IntermediateMacroSummer2022/syllabus/syllabus.tex
@@ -149,8 +149,8 @@ If less than $40\%$ of the students get A- or above, I will add some points to e
 \subsection*{Homework}
 \label{sub:Homework}
 
-There are
-
+There are four homework and each of them worth 5 points.
+The homework is a good representation for what exam would look like.
 
 % \section*{Course Attendance Policy}
 
@@ -195,7 +195,9 @@ There are
         \newline
         Deadline: 05/15 11:59pm
         &
-        Topic:
+        Topic: Introduction
+        \newline
+        Topic: Measurement I
     \\
     \hline
         2
@@ -208,7 +210,9 @@ There are
         \newline
         Deadline: 05/22 11:59pm
         &
-        Topic: Introduction
+        Topic: Measurement II
+        \newline
+        Topic: Consumer Preference I
     \\
     \hline
         3
@@ -219,9 +223,13 @@ There are
         &
         Essence of Calculus Ch.3
         \newline
+        Homework 1
+        \newline
         Deadline: 05/29 11:59pm
         &
-        Topic:
+        Topic: Consumer Preference II
+        \newline
+        Topic: Examples
     \\
     \hline
         4
@@ -234,7 +242,9 @@ There are
         \newline
         Deadline: 06/05 11:59pm
         &
-        Topic:
+        Topic: Firms
+        \newline
+        Topic: Competitive Equilibrium
     \\
     \hline
         5
@@ -247,7 +257,9 @@ There are
         \newline
         Deadline: 06/12 11:59pm
         &
-        Topic:
+        Topic: Social Planer's Problem
+        \newline
+        Topic: Examples
     \\
     \hline
         6
@@ -258,9 +270,13 @@ There are
         &
         Essence of Calculus Ch.6
         \newline
+        Homework 2
+        \newline
         Deadline: 06/14 11:59pm
         &
-        Topic:
+        Topic: Distorting Taxes
+        \newline
+        Midterm Review
     \\
     \hline
         7
@@ -291,7 +307,7 @@ There are
         \newline
         Deadline: 07/03 11:59pm
         &
-        Topic:
+        Topic: Two Period Consumer Problem
     \\
     \hline
         9
@@ -304,7 +320,7 @@ There are
         \newline
         Deadline: 07/10 11:59pm
         &
-        Topic:
+        Topic: Two Period Equilibrium
     \\
     \hline
         10
@@ -315,9 +331,11 @@ There are
         &
         Essence of Calculus Ch.9
         \newline
+        Homework 3
+        \newline
         Deadline: 07/17 11:59pm
         &
-        Topic:
+        Topic: Real Business Cycle Part 1
     \\
     \hline
         11
@@ -330,7 +348,7 @@ There are
         \newline
         Deadline: 07/24 11:59pm
         &
-        Topic:
+        Topic: Real Business Cycle Part 2
     \\
     \hline
         12
@@ -341,9 +359,11 @@ There are
         &
         Essence of Calculus Ch.11
         \newline
+        Homework 4
+        \newline
         Deadline: 07/31 11:59pm
         &
-        Topic:
+        Topic: Real Business Cycle Part 3
     \\
     \hline
         13
