--- a/data/pdf/IntermediateMacroSummer2022/Lecture_17/Lecture_17.tex
+++ b/data/pdf/IntermediateMacroSummer2022/Lecture_17/Lecture_17.tex
@@ -184,7 +184,7 @@
         \item The future wage $ w' $ is determined by $ MPN' $:
         %
         \begin{equation*}
-            MPN' = z ( 1-\alpha ) \left(
+            MPN' = z' ( 1-\alpha ) \left(
                 \frac{K'}{N'_{D}}
             \right)^{\alpha}
         ,\end{equation*}
@@ -192,7 +192,7 @@
         where $ N'_{D} = 1 $ leads to
         %
         \begin{equation*}
-            w' = z ( 1-\alpha ) ( K' )^{\alpha}
+            w' = z' ( 1-\alpha ) ( K' )^{\alpha}
         .\end{equation*}
         %
     \end{enumerate}
